music tracks update + possible fix for mobile overflow-x hidden

--- a/static/css/snowflakes.css
+++ b/static/css/snowflakes.css
@@ -3,7 +3,7 @@
 
 /* adjust the overflow of the whole page body as otherwise scrollbars appear
 and disappear every now and then when one flake crosses the right website border */
-body {
+html, body {
   overflow-x: hidden;
 }
 
